# audio-mixer

./: CMakeLists.txt  README.md  main.cpp
backend/app/: appcontroller.cpp  appcontroller.h
backend/mixer/: channel.cpp  channel.h  channellistmodel.cpp  channellistmodel.h  eq.cpp  eq.h
backend/project/: channelstate.h  eqstate.h  project.h  projectserializer.cpp  projectserializer.h
gui/: Main.qml  Mixer.qml  Transport.qml
gui/components/: ChannelStrip.qml  Header.qml  Mixer.qml  MixerBackground.qml  Transport.qml
gui/controls/: Knob.qml  MixerButton.qml  MixerMiniDisplay.qml  TransportButton.qml  TransportDisplay.qml  VolumeFader.qml
gui/controls/header/: HeaderOption.qml  HeaderTile.qml
gui/dialogs/: ConfirmDialog.qml  DialogButton.qml  ProjectFileDialog.qml
gui/menus/: BackgroundTrackMenuModel.qml  ContextMenu.qml  TrackMenuModel.qml
gui/sections/: EQSection.qml  MuteSoloRow.qml
gui/sections/mixerSection/: EQSection.qml  MuteSoloRow.qml
gui/sections/transportSection/: TransportControls.qml  TransportState.qml
gui/theme/: Theme.qml
gui/themes/: Themes.qml
untitled/: CMakeLists.txt
untitled/gui/: Main.qml
